fixed colors and spacing on the page

--- a/index.css
+++ b/index.css
@@ -1,107 +1,114 @@
 body{
-	background-color: rgb(227, 227, 203);
+    background-color: rgb(227, 227, 203);
 }
 
 .topbar{
-	background-color: rgb(69, 113, 69);
-	align-items: center;
-	padding: 10px 30px;
-	margin-top: 40px;
-	margin-right: 40px;
-	margin-left: 40px;
-	display: flex;
-	justify-content: space-between;
-	height: 60px;
+    background-color: rgb(69, 113, 69);
+    align-items: center;
+    padding: 10px 30px;
+    margin-top: 40px;
+    margin-right: 40px;
+    margin-left: 40px;
+    display: flex;
+    justify-content: space-between;
+    height: 60px;
 }
 
 a{
-	font-size: 17px;
-	color: white;
-	padding-right: 60px;
-	text-decoration: none;
+    font-size: 17px;
+    color: white;
+    padding-right: 60px;
+    text-decoration: none;
 }
 
 .hangmantxt{
-	color: rgb(0, 0, 0);
-	display: flex;
-	justify-content: space-between;
+    color: rgb(0, 0, 0);
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    margin-top: 20px;
 }
 
 .navigation{
-	color: white;
+    color: white;
 }
 
 .text{
-	text-align: center;
-	color: white;
-	padding-right: 20px;
-	margin-left: 150px;
+    text-align: center;
+    color: white;
+    padding-right: 20px;
+    margin-left: 150px;
 }
 
-
 .logobox{
-	display: flex;
-	align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .logo{
-	margin-right: 10px;
-	height: 50px;
-	width: 50px;
+    margin-right: 10px;
+    height: 50px;
+    width: 50px;
 }
 
 .bottombox{
-	box-shadow: 2px 2px 30px black;
-	border: 2px solid rgb(69, 113, 69);
-	background-color: rgb(255, 255, 255);
-	height: 400px;
-	margin-top: 40px;
-	margin-left: 40px;
-	margin-right: 40px;
-	padding: 20px;
-	align-items: center;
-	display: flex;
-	justify-content: center;
-	gap: 200px;
-	
+    box-shadow: 2px 2px 30px black;
+    border: 2px solid rgb(69, 113, 69);
+    background-color: rgb(255, 255, 255);
+    height: 400px;
+    margin-top: 40px;
+    margin-left: 40px;
+    margin-right: 40px;
+    padding: 20px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    gap: 100px;
 }
 
-.hangmanpic{
-	width: 300px;
-	height: 300px;
+.hangmanpic img {
+    width: 300px;
+    height: 300px;
+    object-fit: contain;
 }
 
 #restart_button{
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  align-items: center;
-  margin-top: 20px;
-  width: 100px;
-  height: 50px;
-  border: none;
-  background-color: rgb(69, 113, 69);
-  box-shadow: 2px 2px 30px black;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    margin: 20px auto;
+    width: 150px;
+    height: 50px;
+    border: none;
+    background-color: rgb(69, 113, 69);
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    box-shadow: 2px 2px 10px black;
 }
 
-
 #word{
-  display: flex;
-  text-align: center;
-  color: black;
-  flex-direction: column;
+    text-align: center;
+    color: black;
+    font-size: 28px;
+    font-weight: bold;
+    letter-spacing: 8px;
+    margin: 30px 0;
+    min-height: 50px;
+    font-family: monospace;
 }
 
 .guessword{
-	text-align: center;
-	margin-bottom: 50px;
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 18px;
 }
 
 .column{
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center
 }
 
 button{
